# uv-getting-started

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  deps-upgrade.yml  docker.yml
scripts/: h.py  p.py  pep723.py
src/demo/: cli.py  web.py
