[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "polars>=1.5.0",
    "granian>=1.5.2",
]

[project.scripts]
demo-cli = "demo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "asgiref>=3.8.1",
    "ruff>=0.6.1",
    "pyright>=1.1.377",
    "pytest>=8.3.3",
]
