[project]
name = "demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Дамјан Георгиевски", email = "gdamjan@gmail.com" }
]
license-files = ["LICENSE"]
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.0",
    "polars>=1.31.0",
    "granian>=2",
    "sse-starlette>=3",
    "starlette>=0.47.1",
]

[project.scripts]
demo-cli = "demo.cli:main"

[build-system]
requires = ["uv_build>=0.8,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "asgiref>=3.9.1",
    "ruff>=0.12.0",
    "pyright>=1.1.403",
    "pytest>=8.4.0",
    "granian[reload]>=2",
]
